<resources>
    <string name="app_name" translatable="false">ML Kit Digital Ink Recognition Demo</string>
    <string name="title_activity_main" translatable="false">ML Kit Digital Ink Recognition Demo</string>
    <string name="clear">Clear</string>
    <string name="action_settings">Settings</string>
    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>
    <string name="INK">INK</string>
    <string name="welcome_to_smart_board">Welcome to \'Smart Board\' !</string>
    <string name="select_language">Select language</string>
    <string name="todo">TODO</string>

    <string name="undo">Undo</string>

    <string name="redo">Redo</string>

</resources>