<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/common_google_signin_btn_text_dark_default"
            android:orientation="vertical">

            <com.google.mlkit.samples.vision.digitalink.StatusTextView
                android:id="@+id/status_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/welcome_to_smart_board"
                android:textAlignment="center"
                android:textIsSelectable="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.001" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"

                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/exit_btn"
                    android:layout_width="48dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:background="#000000"
                    android:contentDescription="@string/todo"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.03"
                    app:srcCompat="@drawable/abc_vector_test" />

<!--                <ImageButton-->
<!--                    android:id="@+id/new_btn"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:layout_marginEnd="15dp"-->
<!--                    android:layout_marginRight="15dp"-->
<!--                    android:background="@color/common_google_signin_btn_text_dark_default"-->
<!--                    android:contentDescription="@string/start_new"-->
<!--                    android:src="@drawable/new_folder" />-->


                <ImageButton
                    android:id="@+id/draw_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="0dp"
                    android:background="@color/common_google_signin_btn_text_dark_default"
                    android:contentDescription="@string/brush"
                    android:src="@drawable/pen" />

                <ImageButton
                    android:id="@+id/erase_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/common_google_signin_btn_text_dark_default"
                    android:contentDescription="@string/erase"
                    android:src="@drawable/eraser" />

                <ImageButton
                    android:id="@+id/save_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/common_google_signin_btn_text_dark_default"
                    android:contentDescription="@string/save"
                    android:paddingTop="5dp"
                    android:src="@drawable/save" />

                <!--                <Button-->
                <!--                    android:id="@+id/recognize_button"-->
                <!--                    android:layout_width="2dp"-->
                <!--                    android:layout_height="wrap_content"-->
                <!--                    android:layout_weight="1"-->
                <!--                    android:background="#E64A19"-->
                <!--                    android:onClick="recognizeClick"-->
                <!--                    android:text="Recognize"-->
                <!--                    android:textColor="#FFFFFF" />-->

                <ImageButton
                    android:id="@+id/undo"

                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:src="@drawable/undo"
                    android:text="@string/undo"
                    android:contentDescription="@string/todo" />

                <ImageButton
                    android:id="@+id/redo"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:background="@android:color/background_light"
                    android:src="@drawable/redo"
                    android:text="@string/redo"
                    android:contentDescription="@string/todo" />

                <Button
                    android:id="@+id/clear_button"

                    android:layout_width="60dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/exit"
                    android:onClick="clearClick"
                    android:paddingLeft="50dp"
                    android:paddingRight="50dp"
                    android:src="@drawable/clear" />

            </LinearLayout>

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/Languages_Spinner"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="3"
                android:text="@string/select_language"
                app:layout_constraintEnd_toEndOf="@+id/drawing_view"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/save_btn"
                tools:ignore="MissingClass" />
        </LinearLayout>
    </FrameLayout>


    <com.google.mlkit.samples.vision.digitalink.DrawingView
        android:id="@+id/drawing_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/background_light" />

    <LinearLayout
        android:id="@+id/paint_colors"
        android:layout_width="339dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:background="@android:color/background_light"
        android:orientation="horizontal">

        <ImageButton
            android:layout_width="29dp"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FF660000"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="#FF660000" />

        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FFFF0000"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="#FFFF0000" />

        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FFFF6600"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="#FFFF6600" />

        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FFFFCC00"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="#FFFFCC00" />

        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FF009900"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="#FF009900" />

        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FF009999"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="#FF009999" />

        <ImageButton
            android:layout_width="29dp"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FF0000FF"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="#FF0000FF" />

        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FF990099"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="#FF990099" />

        <ImageButton
            android:layout_width="@dimen/large_brush"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FFFF6666"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="#FFFF6666" />

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="@dimen/large_brush"
            android:layout_margin="2dp"
            android:background="#FF787878"
            android:contentDescription="@string/paint"
            android:onClick="paintClicked"
            android:src="@drawable/paint"
            android:tag="#FF787878" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@color/common_google_signin_btn_text_light_default">

        <ImageButton
            android:id="@+id/download_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/todo"
            android:onClick="downloadClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/delete_button"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/download" />

        <ImageButton
            android:id="@+id/delete_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="#FFFFFF"
            android:contentDescription="@string/todo"
            android:onClick="deleteClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/delete" />


    </LinearLayout>

</LinearLayout>